# alafi

./: .config.yaml.example  .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yaml  manage.py  pyproject.toml
alafi/: asgi.py  urls.py  wsgi.py
alafi/settings/: __init__.py  config.py
exchange/: abc.py  admin.py  authentication.py  models.py  trade.py  urls.py
exchange/management/commands/: run_transaction_settler.py
exchange/migrations/: 0001_initial.py
exchange/serializers/api/v1/: __init__.py  purchase.py
exchange/tests/: test_authentication.py  test_settle.py
exchange/tests/views/api/v1/: test_purchase.py
exchange/views/api/v1/: __init__.py  purchase.py
